--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.2'
+//        compile 'com.android.support:appcompat-v7:22.2.0'
+  //      compile 'com.android.support:design:22.2.0'
+    //    compile 'com.android.support:recyclerview-v7:22.2.0'
+      //  compile 'com.mcxiaoke.volley:library:1.0.16'
+        //compile 'com.google.code.gson:gson:2.3.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,3 +26,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
