--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.mcxiaoke.volley:library:1.0.16'
+    compile 'com.google.code.gson:gson:2.3'
 
 
 
