--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,44 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <!-- Red -->
+                <uses-permission android:name="android.permission.INTERNET" />
+
+                <!-- Autenticación -->
                 <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
-                <category android:name="android.intent.category.LAUNCHER" />
+
+                <!-- Sincronización -->
+                <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+                <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+
+
+                <!-- ACTIVIDAD PRINCIPAL -->
+                <activity
+                    android:name=".ui.MainActivity"
+                    android:label="@string/app_name">
+                    <intent-filter>
+                        <action android:name="android.intent.action.MAIN" />
+
+                        <category android:name="android.intent.category.LAUNCHER" />
+                    </intent-filter>
+                </activity>
+
+                <!-- ACTIVIDAD DE INSERCIÓN -->
+                <activity
+                    android:name=".ui.InsertActivity"
+                    android:label="@string/title_activity_detail"
+                    android:parentActivityName=".ui.MainActivity">
+                    <meta-data
+                        android:name="android.support.PARENT_ACTIVITY"
+                        android:value="com.herprogramacion.crunch_expenses.ui.MainActivity" />
+                </activity>
+
+                <!-- PROVIDER -->
+                <provider
+                    android:name=".provider.ProviderDeGastos"
+                    android:authorities="@string/provider_authority"
+                    android:exported="false"
+                    android:syncable="true" />
 
                 <!-- SERVICIO DE AUTENTICACIÓN -->
                 <service android:name=".sync.AuthenticationService">
@@ -24,10 +59,19 @@
                     <meta-data
                         android:name="android.accounts.AccountAuthenticator"
                         android:resource="@xml/authenticator" />
+                </service>
 
-                    <!-- Sincronización -->
-                    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
-                    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+                <!-- SERVICIO DE SINCRONIZACIÓN -->
+                <service
+                    android:name=".sync.SyncService"
+                    android:exported="true">
+                    <intent-filter>
+                        <action android:name="android.content.SyncAdapter" />
+                    </intent-filter>
+
+                    <meta-data
+                        android:name="android.content.SyncAdapter"
+                        android:resource="@xml/sync_adapter" />
 
                 </service>
 
